tests/ui/parser/attribute/attr-dangling-in-mod.stderr
error: expected item after attributes
  --> $DIR/attr-dangling-in-mod.rs:4:1
   |
LL | #[foo = "bar"]
   | ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

